(fix) text hiding on sidebar collapse

--- a/src/components/custom/menu/s.module.scss
+++ b/src/components/custom/menu/s.module.scss
@@ -67,6 +67,11 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 1.2;
+  white-space: nowrap;
+
+  :global(.ant-layout-sider-collapsed) & {
+    display: none;
+  }
 }
 
 .icon {
